2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: New command 'setacl'.
	* S3/S3.py: Implemented set_acl().
	* S3/ACL.py: Fill in <Owner/> tag in ACL XML.
	* NEWS: Info about 'setacl'.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Factored remote_keys generation from cmd_object_get()
	  to fetch_remote_keys().
	* s3cmd: Display Public URL in 'info' for AnonRead objects.
	* S3/ACL.py: Generate XML from a current list of Grantees

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* S3/ACL.py: Keep ACL internally as a list of of 'Grantee' objects.
	* S3/Utils.py: Fix crash in stripNameSpace() when the XML has no NS.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* S3/ACL.py: New object for handling ACL issues.
	* S3/S3.py: Moved most of S3.get_acl() to ACL class.
	* S3/Utils.py: Reworked XML helpers - remove XMLNS before 
	  parsing the input XML to avoid having all Tags prefixed
	  with {XMLNS} by ElementTree.

2009-01-03  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Don't fail when neither $HOME nor %USERPROFILE% is set.
	  (fixes #2483388)

2009-01-01  W. Tell  <w_tell -at- sourceforge>

	* S3/S3.py, S3/Utils.py: Use 'hashlib' instead of md5 and sha 
	  modules to avoid Python 2.6 warnings.

2008-12-31  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre4
	  ---------------------------

2008-12-31  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Reworked internal handling of unicode vs encoded filenames.
	  Should replace unknown characters with '?' instead of baling out.

2008-12-31  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Display system encoding in use.
	* s3cmd: Print a nice error message when --exclude-from
	  file is not readable.
	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre4
	* S3/Exceptions.py: Added missing imports.
	* NEWS: Updated.
	* testsuite: reorganised UTF-8 files, added GBK encoding files,
	  moved encoding-specific files to 'tar.gz' archives, removed 
	  unicode dir.
	* run-tests.py: Adapted to the above change.